force-app/main/default/objects/Sales_Ops_Requests__c/Sales_Ops_Requests__c.object-meta.xml
<CustomObject>
    <label>Sales Ops Requests</label>
    <nameField>
        <displayFormat>SOR-{0000000}</displayFormat>
        <label>SOR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Ops Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>