force-app/main/default/objects/Sales_Ops_Requests__c/fields/Business_Partner__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Ops_Requests9</relationshipName>
    <type>Lookup</type>
</CustomField>