force-app/main/default/objects/Sales_Ops_Requests__c/fields/Business_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Business_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Ops_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>