force-app/main/default/objects/Sales_Ops_Requests__c/fields/Campaign_Business__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Business__c</fullName>
    <label>Campaign Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>CHES</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>SKE</fullName>
            </value>
            <value>
                <fullName>SKO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>