force-app/main/default/objects/Sales_Ops_Requests__c/fields/Campaign_Summary__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Summary__c</fullName>
    <label>Campaign Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>