force-app/main/default/objects/Sales_Ops_Requests__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Account Implementation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>New Business Prospecting</fullName>
            </value>
            <value>
                <fullName>Flip All Accounts (New Hire / Termination)</fullName>
            </value>
            <value>
                <fullName>Multiple Account Change</fullName>
            </value>
            <value>
                <fullName>Postal Code Re-Assignment</fullName>
            </value>
            <value>
                <fullName>Territory Re-Alignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>