force-app/main/default/objects/Sales_Ops_Requests__c/fields/Campaiign_Business_1__c.field-meta.xml
<CustomField>
    <fullName>Campaiign_Business_1__c</fullName>
    <label>Business Segment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SKO</fullName>
            </value>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>SKE</fullName>
            </value>
            <value>
                <fullName>CHES</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Facilities/Brokers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>