force-app/main/default/objects/Sales_Ops_Requests__c/fields/Case_Approver_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Case_Approver_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Approver&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Ops_Requests6</relationshipName>
    <type>Lookup</type>
</CustomField>