force-app/main/default/objects/Sales_Ops_Requests__c/fields/Corporate_Account_Implementation_Type__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account_Implementation_Type__c</fullName>
    <label>Corporate Account Implementation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Mandated</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>