force-app/main/default/objects/Sales_Ops_Requests__c/fields/CRM_Analyst__c.field-meta.xml
<CustomField>
    <fullName>CRM_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Analyst</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.Username</field>
            <operation>equals</operation>
            <value>pituck.clayton@cleanharbors.com.chfull</value>
        </filterItems>
        <filterItems>
            <field>User.Username</field>
            <operation>equals</operation>
            <value>susan.robinson@safety-kleen.com.chprod.chfull</value>
        </filterItems>
        <filterItems>
            <field>User.Username</field>
            <operation>equals</operation>
            <value>mazzilli.michael.hr@cleanharbors.com.chfull</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Ops_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>