force-app/main/default/objects/Sales_Ops_Requests__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD - U.S. Dollar</fullName>
            </value>
            <value>
                <fullName>CAD - Canadian Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>