force-app/main/default/objects/Sales_Ops_Requests__c/fields/Current_Owner_Primary_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_Primary_Service_Provider__c</fullName>
    <label>Current Owner Primary Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Business</valueSetName>
    </valueSet>
</CustomField>