force-app/main/default/objects/Sales_Ops_Requests__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <formula>IF(Month(DATEVALUE(CreatedDate)) =1, DATE(YEAR(DATEVALUE(CreatedDate)) , 04 , 01),
IF(Month(DATEVALUE(CreatedDate)) =2, DATE(YEAR(DATEVALUE(CreatedDate)) , 04 , 01),
IF(Month(DATEVALUE(CreatedDate)) =3, if((DAY(DATEVALUE(CreatedDate))&gt;= 25),DATE(YEAR(DATEVALUE(CreatedDate)) , 07 , 01),DATE(YEAR(DATEVALUE(CreatedDate)) , 04 , 01)),
IF(Month(DATEVALUE(CreatedDate)) =4, DATE(YEAR(DATEVALUE(CreatedDate)) , 07 , 01),
IF(Month(DATEVALUE(CreatedDate)) =5, DATE(YEAR(DATEVALUE(CreatedDate)) , 07 , 01),
IF(Month(DATEVALUE(CreatedDate)) =6, if((DAY(DATEVALUE(CreatedDate))&gt;= 24),DATE(YEAR(DATEVALUE(CreatedDate)) , 10 , 01),DATE(YEAR(DATEVALUE(CreatedDate)) , 07 , 01)),
IF(Month(DATEVALUE(CreatedDate)) =7, DATE(YEAR(DATEVALUE(CreatedDate)) , 10 , 01),
IF(Month(DATEVALUE(CreatedDate)) =8, DATE(YEAR(DATEVALUE(CreatedDate)) , 10 , 01),
IF(Month(DATEVALUE(CreatedDate)) =9, if((DAY(DATEVALUE(CreatedDate))&gt;= 24),DATE(YEAR(DATEVALUE(CreatedDate))+1 , 01 , 01),DATE(YEAR(DATEVALUE(CreatedDate)) , 10 , 01)),
IF(Month(DATEVALUE(CreatedDate)) =10, DATE(YEAR(DATEVALUE(CreatedDate))+1 , 01 , 01),
IF(Month(DATEVALUE(CreatedDate)) =11, DATE(YEAR(DATEVALUE(CreatedDate))+1 , 01 , 01),
IF(DAY(DATEVALUE(CreatedDate))&gt;= 25,DATE(YEAR(DATEVALUE(CreatedDate))+1 , 04 , 01),DATE(YEAR(DATEVALUE(CreatedDate))+1 , 01 , 01)))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>