force-app/main/default/objects/Sales_Ops_Requests__c/fields/List_of_Win_IDs__c.field-meta.xml
<CustomField>
    <fullName>List_of_Win_IDs__c</fullName>
    <label>List of Win IDs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>