force-app/main/default/objects/Sales_Ops_Requests__c/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <description>This field captures the New owner.</description>
    <label>New Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>