force-app/main/default/objects/Sales_Ops_Requests__c/fields/Number_of_Accounts_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Accounts_Impacted__c</fullName>
    <label>Number of Accounts Impacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>