force-app/main/default/objects/Sales_Ops_Requests__c/fields/Old_Owner__c.field-meta.xml
<CustomField>
    <fullName>Old_Owner__c</fullName>
    <description>This field is used to capture the old owner.</description>
    <label>Old Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>