force-app/main/default/objects/Sales_Ops_Requests__c/fields/Pardot_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Campaign_Type__c</fullName>
    <label>New Business Prospecting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drip Campaign</fullName>
            </value>
            <value>
                <fullName>Email Blast</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>