force-app/main/default/objects/Sales_Ops_Requests__c/fields/Proposed_Owner__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Ops_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>