force-app/main/default/objects/Sales_Ops_Requests__c/fields/Proposed_Owner_s_Case_Approver__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Owner_s_Case_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Owner&apos;s Case Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Ops_Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>