force-app/main/default/objects/Sales_Ops_Requests__c/fields/Qty_of_Records_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Qty_of_Records_Impacted__c</fullName>
    <label>Qty. of Records Impacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>