force-app/main/default/objects/Sales_Ops_Requests__c/fields/Reason_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Request__c</fullName>
    <label>Reason for Request</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Campaign_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Back-Fill</fullName>
            </value>
            <value>
                <fullName>Promotion/Replacement</fullName>
            </value>
            <value>
                <fullName>Open Territory</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Account Clean-Up</fullName>
            </value>
            <value>
                <fullName>Book Rebalance</fullName>
            </value>
            <value>
                <fullName>Territory Alignment</fullName>
            </value>
            <value>
                <fullName>Brand Re-Assignment</fullName>
            </value>
            <value>
                <fullName>AM/SR Cross-Over</fullName>
            </value>
            <value>
                <fullName>Territory Consolidation</fullName>
            </value>
            <value>
                <fullName>Territory Addition</fullName>
            </value>
            <value>
                <fullName>Territory Shuffle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>