force-app/main/default/objects/Sales_Ops_Requests__c/fields/Revenue_Goals__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Goals__c</fullName>
    <label>Revenue Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>