force-app/main/default/objects/Sales_Ops_Requests__c/fields/Sales_Manager_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Ops_Requests8</relationshipName>
    <type>Lookup</type>
</CustomField>