force-app/main/default/objects/Sales_Ops_Requests__c/fields/Sales_Objects_to__c.field-meta.xml
<CustomField>
    <fullName>Sales_Objects_to__c</fullName>
    <label>Salesforce Objects to Load</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Accounts</fullName>
            </value>
            <value>
                <fullName>Prospect Accounts</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
			<value>
                <fullName>Contacts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>