force-app/main/default/objects/Sales_Ops_Requests__c/fields/Single_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Single_Zip_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Single Zip Code</label>
    <referenceTo>ZIP_Master__c</referenceTo>
    <relationshipLabel>Sales Ops Requests</relationshipLabel>
    <relationshipName>Sales_Ops_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>