force-app/main/default/objects/Sales_Ops_Requests__c/fields/Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Status_Detail__c</fullName>
    <label>Status Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Launch</fullName>
            </value>
            <value>
                <fullName>Awaiting User Info</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Preparing Load File</fullName>
            </value>
            <value>
                <fullName>Service Now Ticket Created</fullName>
            </value>
            <value>
                <fullName>Budget App Updates Required</fullName>
            </value>
            <value>
                <fullName>Scheduling Date for Review</fullName>
            </value>
            <value>
                <fullName>Prepared for Maps Session</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Could not complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>