force-app/main/default/objects/Sales_Ops_Requests__c/recordTypes/Bulk_owner_change_request.recordType-meta.xml
<RecordType>
    <fullName>Bulk_owner_change_request</fullName>
    <active>true</active>
    <label>Bulk Owner Change Request</label>
</RecordType>