force-app/main/default/objects/Sales_Ops_Requests__c/recordTypes/New_Campaign_Requests.recordType-meta.xml
<RecordType>
    <fullName>New_Campaign_Requests</fullName>
    <active>true</active>
    <label>New Campaign Requests</label>
    
</RecordType>