force-app/main/default/objects/Sales_Ops_Requests__c/validationRules/Restrict_Edit_On_Approved_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Edit_On_Approved_Status</fullName>
    <active>true</active>
    <description>This Validation rule is for making Business Segment and Revenue Goal fields read-only if SOR Status is Approved</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &quot;Approved&quot;),
 RecordType.DeveloperName = &apos;New_Campaign_Requests&apos;,
 NOT( $Profile.Name = &quot;System Administrator&quot;),
 NOT( $Profile.Name = &quot;IT Super User&quot;),
 OR(
     ISCHANGED( Campaiign_Business_1__c ),
     ISCHANGED( Revenue_Goals__c )
   )
)</errorConditionFormula>
    <errorMessage>You are not allowed to edit Business Segment and Revenue Goal once the SOR is in Approved state</errorMessage>
</ValidationRule>