force-app/main/default/objects/Sales_Ops_Requests__c/validationRules/Status_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_cannot_be_changed</fullName>
    <active>true</active>
    <description>Status cannot be changed from rejected</description>
    <errorConditionFormula>AND(
NOT($Profile.Name = &quot;Integration&quot;),
NOT($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
NOT ($Profile.Name = &quot;System Administrator&quot;),
ISPICKVAL(PRIORVALUE(Status__c),&apos;Rejected&apos;),
ISPICKVAL(Status__c,&apos;New&apos;)|| ISPICKVAL(Status__c,&apos;Approved&apos;) ||
ISPICKVAL(Status__c,&apos;Closed&apos;)) ||

AND(
NOT($Profile.Name = &quot;Integration&quot;),
NOT($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
NOT ($Profile.Name = &quot;System Administrator&quot;),
ISPICKVAL(PRIORVALUE(Status__c),&apos;New&apos;),
ISPICKVAL(Status__c,&apos;Rejected&apos;)|| ISPICKVAL(Status__c,&apos;Approved&apos;) ||
ISPICKVAL(Status__c,&apos;Closed&apos;))</errorConditionFormula>
    <errorMessage>Please Choose Submitted.</errorMessage>
</ValidationRule>