force-app/main/default/objects/Sales_Ops_Requests__c/validationRules/Status_Detail_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Detail_Mandatory</fullName>
    <active>true</active>
    <description>Status Detail is mandatory when status equal to Approved and Closed.</description>
    <errorConditionFormula>And(OR(ISPICKVAL(Status__c,&apos;Approved&apos;),
ISPICKVAL(Status__c,&apos;Closed&apos;)),
isblank(text(Status_Detail__c)))</errorConditionFormula>
    <errorDisplayField>Status_Detail__c</errorDisplayField>
    <errorMessage>Please select the Status Detail.</errorMessage>
</ValidationRule>