force-app/main/default/objects/Sales_Ops_Requests__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Status_Detail__c</columns>
    <columns>Campaign_Start_Date__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Campaiign_Business_1__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>