force-app/main/default/objects/Sales_Ops_Requests__c/listViews/All_Campaign_Requests.listView-meta.xml
<ListView>
    <fullName>All_Campaign_Requests</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Campaign_Start_Date__c</columns>
    <columns>Campaign_Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Business_Sponsor__c</columns>
    <columns>CRM_Analyst__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Ops_Requests__c.New_Campaign_Requests</value>
    </filters>
    <label>All Campaign Requests</label>
</ListView>