force-app/main/default/objects/Sales_Ops_Requests__c/listViews/All_Multiple_Account_Change.listView-meta.xml
<ListView>
    <fullName>All_Multiple_Account_Change</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Status_Detail__c</columns>
    <columns>Campaign_Type__c</columns>
    <columns>Current_Owner__c</columns>
    <columns>Proposed_Owner__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Ops_Requests__c.Bulk_owner_change_request</value>
    </filters>
    <filters>
        <field>Campaign_Type__c</field>
        <operation>equals</operation>
        <value>Multiple Account Change</value>
    </filters>
    <label>All Multiple Account Change</label>
</ListView>