force-app/main/default/objects/Sales_Ops_Requests__c/listViews/Completed_Bulk_Owner_Change_Requests.listView-meta.xml
<ListView>
    <fullName>Completed_Bulk_Owner_Change_Requests</fullName> 
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Status_Detail__c</columns>
    <columns>Campaign_Type__c</columns>
    <columns>Current_Owner__c</columns>
    <columns>Proposed_Owner__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Ops_Requests__c.Bulk_owner_change_request</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Status_Detail__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Bulk Owner Change Requests</label> 
</ListView>