force-app/main/default/objects/Sales_Ops_Requests__c/listViews/CRM_Sales_Ops_Requests.listView-meta.xml
<ListView>
    <fullName>CRM_Sales_Ops_Requests</fullName>
    <filterScope>Queue</filterScope>
    <label>CRM</label>
    <queue>CRM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>